--- a/src/Styles/Title.css
+++ b/src/Styles/Title.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy') ;
 
 ::selection {
   background: transparent;
@@ -6,24 +6,24 @@
 
 .login-title {
   animation: bounce 0.5s ease infinite alternate;
-  color: rgba(255, 255, 255, 1);
+  color: white;
   display: inline-block;
   font-family: Luckiest Guy , cursive;
   font-size: 80px;
-  position: relative;
-  top: 20px;
-  text-shadow: 
-    0 1px 0 rgba(180, 250, 250, 1),
-    0 2px 0 rgba(170, 240, 240, 1),
-    0 3px 0 rgba(160, 230, 230, 1),
-    0 4px 0 rgba(150, 220, 220, 1),
-    0 5px 0 rgba(140, 210, 210, 1),
-    0 6px 0 transparent, 
-    0 7px 0 transparent, 
-    0 8px 0 transparent,
-    0 9px 0 transparent, 
-    0 10px 10px rgba(0, 0, 105, 0.4);
   -webkit-font-smoothing: antialiased;
+  position: relative;
+  text-shadow: 0
+    1px 0 rgba(180, 250, 250, 1) , 0
+    2px 0 rgba(170, 240, 240, 1) , 0
+    3px 0 rgba(160, 230, 230, 1) , 0
+    4px 0 rgba(150, 220, 220, 1) , 0
+    5px 0 rgba(140, 210, 210, 1) , 0
+    6px 0 transparent , 0
+    7px 0 transparent , 0
+    8px 0 transparent , 0
+    9px 0 transparent , 0
+    10px 10px rgba(0, 0, 105, 0.4);
+  top: 20px;
 }
 
 .title-text-1 {
@@ -42,68 +42,69 @@ h1 {
   width: 100%;
 }
 
-.login-title:nth-child(1) {
+.login-title:nth-child( 1 ) {
   animation-delay: 0.1s;
 }
 
-.login-title:nth-child(2) {
+.login-title:nth-child( 2 ) {
   animation-delay: 0.2s;
 }
 
-.login-title:nth-child(3) {
+.login-title:nth-child( 3 ) {
   animation-delay: 0.3s;
 }
 
-.login-title:nth-child(4) {
+.login-title:nth-child( 4 ) {
   animation-delay: 0.4s;
 }
 
-.login-title:nth-child(5) {
+.login-title:nth-child( 5 ) {
   animation-delay: 0.5s;
 }
 
-.login-title:nth-child(6) {
+.login-title:nth-child( 6 ) {
   animation-delay: 0.2s;
 }
 
-.login-title:nth-child(7) {
+.login-title:nth-child( 7 ) {
   animation-delay: 0.3s;
 }
 
-.login-title:nth-child(8) {
+.login-title:nth-child( 8 ) {
   animation-delay: 0.4s;
 }
 
-.login-title:nth-child(9) {
+.login-title:nth-child( 9 ) {
   animation-delay: 0.5s;
 }
 
-.login-title:nth-child(10) {
+.login-title:nth-child( 10 ) {
   animation-delay: 0.6s;
 }
 
-.login-title:nth-child(11) {
+.login-title:nth-child( 11 ) {
   animation-delay: 0.7s;
 }
 
-.login-title:nth-child(12) {
+.login-title:nth-child( 12 ) {
   animation-delay: 0.8s;
 }
 
 @keyframes bounce {
+
   100% {
     color: rgba(200, 255, 255, 1);
+    text-shadow: 0
+      1px 5px rgba(160, 250, 250, 1) , 0
+      2px 5px rgba(150, 240, 240, 1) , 0
+      3px 5px rgba(140, 230, 230, 1) , 0
+      4px 5px rgba(130, 220, 220, 1) , 0
+      5px 5px rgba(120, 210, 210, 1) , 0
+      6px 5px rgba(110, 200, 200, 1) , 0
+      7px 5px rgba(100, 190, 190, 1) , 0
+      8px 5px rgba(90, 180, 180, 1) , 0
+      9px 5px rgba(80, 170, 170, 1) , 0
+      50px 25px rgba(0, 0, 100, 0.2);
     top: -10px;
-    text-shadow: 
-      0 1px 5px rgba(160, 250, 250, 1),
-      0 2px 5px rgba(150, 240, 240, 1), 
-      0 3px 5px rgba(140, 230, 230, 1), 
-      0 4px 5px rgba(130, 220, 220, 1),
-      0 5px 5px rgba(120, 210, 210, 1), 
-      0 6px 5px rgba(110, 200, 200, 1), 
-      0 7px 5px rgba(100, 190, 190, 1), 
-      0 8px 5px rgba(90, 180, 180, 1), 
-      0 9px 5px rgba(80, 170, 170, 1),
-      0 50px 25px rgba(0, 0, 100, 0.2);
-  } 
+  }
 }
